--- a/AuthFormProject/AuthFormProject/package.json
+++ b/AuthFormProject/AuthFormProject/package.json
@@ -10,7 +10,10 @@
     "parse": "^1.9.2",
     "parse-react": "^0.5.2",
     "react": "15.4.1",
+    "react-addons-shallow-compare": "^15.4.1",
     "react-native": "0.39.0",
+    "react-native-router-flux": "^3.37.0",
+    "react-native-tab-view": "0.0.40",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
