--- a/VoidApp/VoidApp/package.json
+++ b/VoidApp/VoidApp/package.json
@@ -7,11 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "babel-plugin-transform-remove-console": "^6.8.0",
     "base64-js": "^1.2.0",
+    "binary-parser": "^1.1.5",
+    "buffer": "^5.0.2",
     "react": "15.4.1",
     "react-native": "0.39.1",
     "react-native-ble": "^1.0.7",
-    "react-native-ble-manager": "^2.4.2"
+    "react-native-ble-manager": "^2.4.2",
+    "react-native-chart": "^0.1.4",
+    "react-native-vector-icons": "^3.0.0",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.1.0",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
