--- a/VoidApp/VoidApp/package.json
+++ b/VoidApp/VoidApp/package.json
@@ -11,6 +11,7 @@
     "base64-js": "^1.2.0",
     "binary-parser": "^1.1.5",
     "buffer": "^5.0.2",
+    "moment": "^2.17.1",
     "react": "15.4.1",
     "react-native": "0.39.1",
     "react-native-ble": "^1.0.7",
